Update dependencies, publish using GitHub actions and correctly support inline return tags.